@@ -50,7 +50,8 @@ def usage(mode=0) :
            '\nREGULAR COMMAND:'\
            '\n  %prog -e mfxx32516 -d NoDetector.0:Epix10ka.3 -r 1021 -D -L INFO'\
            '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r394 -t 396 -o ./work -D -c ./calib # deploys 394-end.data for all calibrations found for runs <= 386'\
-           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r544 -o ./work -D -c ./calib'
+           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r544 -o ./work -D -c ./calib'\
+           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r544 -o ./work -D -c ./calib --gainci'
 
 #------------------------------
 
@@ -69,6 +70,7 @@ def option_parser() :
     d_high    = 1.
     d_medium  = 0.33333 
     d_low     = 0.01
+    d_gainci  = False
 
     h_exp     = 'experiment name, default = %s' % d_exp
     h_det     = 'detector name, default = %s' % d_det
@@ -83,6 +85,7 @@ def option_parser() :
     h_high    = 'default high   gain, default = %s' % str(d_high)
     h_medium  = 'default medium gain, default = %s' % str(d_medium)
     h_low     = 'default low    gain, default = %s' % str(d_low)
+    h_gainci  = 'deploy gain constants evaluated in charge injection OVERRIDES regular gain, default = %s' % d_gainci
 
     parser = OptionParser(description=usage(1), usage = usage())
     parser.add_option('-e', '--exp',     default=d_exp,     action='store', type='string', help=h_exp)
@@ -97,6 +100,7 @@ def option_parser() :
     parser.add_option(      '--high',    default=d_high,    action='store', type='float',  help=h_high)
     parser.add_option(      '--medium',  default=d_medium,  action='store', type='float',  help=h_medium)
     parser.add_option(      '--low',     default=d_low,     action='store', type='float',  help=h_low)
+    parser.add_option('-g', '--gainci',  default=d_gainci,  action='store_true',           help=h_gainci)
 
     return parser
 
